--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,8 @@
   "name": "app-backend",
   "version": "0.0.0",
   "scripts": {
-    "start": "nodemon ./src/main.js",
-    "preview": "node ./src/main.js"
+    "start": "node ./src/main.js",
+    "dev": "nodemon ./src/main.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
