--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
     "postinstall": "npm run install-backend && npm run install-frontend",
     "install-backend": "cd ./backend && npm install",
     "install-frontend": "cd ./frontend && npm install",
-    "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-    "start-backend": "cd ./backend && npm start",
-    "start-frontend": "cd ./frontend && npm run dev",
+    "start": "cd ./backend && npm run start",
+    "dev": "concurrently \"npm run dev-backend\" \"npm run dev-frontend\"",
+    "dev-backend": "cd ./backend && npm run dev",
+    "dev-frontend": "cd ./frontend && npm run dev",
     "build": "npm run clean-build-files && npm run build-frontend && npm run copy-frontend-dist",
     "build-frontend": "cd ./frontend && npm run build",
     "copy-frontend-dist": "copyfiles ./frontend/dist/**/* ./backend/src/public/ --up 2 --all --verbose",
     "clean-build-files": "npm run clean-backend-public && npm run clean-frontend-dist",
     "clean-backend-public": "del-cli ./backend/src/public --verbose",
     "clean-frontend-dist": "del-cli ./frontend/dist --verbose",
-    "preview": "cd ./backend && npm run preview",
-    "faviconCheck:dev": "cd ./frontend && npm run faviconCheck",
-    "faviconCheck:build": "npx realfavicon check http://localhost:3000"
+    "favicon-check-dev": "cd ./frontend && npm run favicon-check",
+    "favicon-check-build": "npx realfavicon check http://localhost:3000"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
