--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,19 @@
     "favicon-check": "npx realfavicon check http://localhost:5173"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.5.2",
     "@vitest/browser": "^3.2.4",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint": "^9.8.0",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "playwright": "^1.53.1",
