--- a/package.json
+++ b/package.json
@@ -5,27 +5,21 @@
     "postinstall": "npm run install-backend && npm run install-frontend",
     "install-backend": "cd ./backend && npm install",
     "install-frontend": "cd ./frontend && npm install",
-    "start": "cd ./backend && npm run start",
+    "start-backend": "cd ./backend && npm start",
     "dev": "concurrently \"npm run dev-backend\" \"npm run dev-frontend\"",
     "dev-backend": "cd ./backend && npm run dev",
     "dev-frontend": "cd ./frontend && npm run dev",
-    "build": "npm run clean-build-files && npm run build-frontend && npm run copy-frontend-dist",
-    "build-frontend": "cd ./frontend && npm run build",
-    "copy-frontend-dist": "copyfiles ./frontend/dist/**/* ./backend/src/public/ --up 2 --all --verbose",
-    "clean-build-files": "npm run clean-backend-public && npm run clean-frontend-dist",
-    "clean-backend-public": "del-cli ./backend/src/public --verbose",
-    "clean-frontend-dist": "del-cli ./frontend/dist --verbose",
+    "build": "cd ./frontend && npm run build",
     "lint": "npm run lint-backend && npm run lint-frontend",
     "lint-backend": "cd ./backend && npm run lint",
     "lint-frontend": "cd ./frontend && npm run lint",
     "test-backend": "cd ./backend && npm run test",
     "test-frontend": "cd ./frontend && npm run test",
-    "favicon-check-dev": "cd ./frontend && npm run favicon-check",
-    "favicon-check-build": "npx realfavicon check http://localhost:3000"
+    "preview": "concurrently \"npm run start-backend\" \"npm run preview-frontend\"",
+    "preview-frontend": "cd ./frontend && npm run preview",
+    "favicon-check": "cd ./frontend && npm run favicon-check"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "copyfiles": "^2.4.1",
-    "del-cli": "^5.1.0"
+    "concurrently": "^8.2.2"
   }
 }
