--- a/package.json
+++ b/package.json
@@ -1,25 +1,45 @@
 {
   "name": "app",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "npm run install-backend && npm run install-frontend",
-    "install-backend": "cd ./backend && npm install",
-    "install-frontend": "cd ./frontend && npm install",
-    "start-backend": "cd ./backend && npm start",
-    "dev": "concurrently \"npm run dev-backend\" \"npm run dev-frontend\"",
-    "dev-backend": "cd ./backend && npm run dev",
-    "dev-frontend": "cd ./frontend && npm run dev",
-    "build": "cd ./frontend && npm run build",
-    "lint": "npm run lint-backend && npm run lint-frontend",
-    "lint-backend": "cd ./backend && npm run lint",
-    "lint-frontend": "cd ./frontend && npm run lint",
-    "test-backend": "cd ./backend && npm run test",
-    "test-frontend": "cd ./frontend && npm run test",
-    "preview": "concurrently \"npm run start-backend\" \"npm run preview-frontend\"",
-    "preview-frontend": "cd ./frontend && npm run preview",
-    "favicon-check": "cd ./frontend && npm run favicon-check"
+    "postinstall": "npx playwright install",
+    "dev": "cross-env NODE_ENV=development node server.js",
+    "build": "vite build",
+    "lint": "eslint .",
+    "lint:server": "eslint ./server",
+    "lint:client": "eslint ./src",
+    "test": "vitest",
+    "test:server": "vitest server/tests",
+    "test:client": "vitest src/tests",
+    "serve": "cross-env NODE_ENV=production node server.js",
+    "faviconCheck": "npx realfavicon check http://localhost:3000"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@eslint/js": "^9.8.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/browser": "^3.2.4",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "playwright": "^1.53.1",
+    "sass-embedded": "^1.77.8",
+    "vite": "^5.4.0",
+    "vitest": "^3.2.4",
+    "vitest-browser-react": "^0.3.0"
   }
 }
